# flock

./: .gitignore  .npmignore  .prettierrc  Cargo.toml  README.md  flock-rs.linux-arm64-gnu.node  flock-rs.linux-arm64-musl.node  flock-rs.linux-x64-gnu.node  flock-rs.node  global.d.ts  index.cjs  index.d.ts  index.js  jsconfig.json  package-lock.json  package.json
install/: index.js
src/: flock.rs  lib.rs  main.rs
test/: index.js
