[package]
name = "flock-rs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "flock_rs"

[dependencies]
napi = { version = "3.0.0-alpha.24", default-features = false, features = ["napi4"] }
#napi =  { path = "../napi-rs/crates/napi", features = ["napi1"] }
napi-derive = { version = "3.0.0-alpha.22" }
fs4 = { version = "0.12", features = ["sync"] }

[build-dependencies]
napi-build = "2"