[package]
name = "flock-rs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "flock_rs"

[dependencies]
napi = { version = "2.1.3", default-features = false, features = ["async", "napi4"] }
#napi =  { path = "../napi-rs/crates/napi", features = ["napi1"] }
napi-derive = { version = "2.1.3" }
async-std = { version = "1.13.0", features = ["attributes"] }
fs4 = { version = "0.12", features = ["async-std"] }

[build-dependencies]
napi-build = "2.1.3"

[workspace]
exclude = [
    "node_modules/flock-rs",
]